# imgrit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/imgrit/: __init__.py  imgrit.py
tests/: sample.py  test.ipynb
